--- a/index.html
+++ b/index.html
@@ -10,4 +10,7 @@
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
+  <footer>
+    <p>Data sourced from the <a href="https://data.worldbank.org/">World Bank</a>.</p>
+  </footer>
 </html>
