--- a/index.html
+++ b/index.html
@@ -11,4 +11,7 @@
   <body>
     <div id="app"></div>
   </body>
+  <footer>
+    <p>Data sourced from the <a href="https://data.worldbank.org/">World Bank</a>.</p>
+  </footer>
 </html>
